Fixed version issue and got running using vizinet npm and angular version. Replaced all files with working versions.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,4 +19,5 @@
       <p>Respawn Timer: {{player.respawn}}</p>
     </mat-card>
   </mat-card>
+  <!-- <mat-card>Score Text</mat-card> -->
 </div>
