Setup code to build teams by clicking and pass teams into game dashboard.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,12 +3,12 @@
         <img src="../resources/VizientLogo.png" class="enterprise-header__logo" alt="Vizient">
         <!-- <div class="vizient__logo"> </div> -->
     </a>
-    <span class="clickable" (click)="navigate('')">
+    <!-- <span class="clickable" (click)="navigate('')">
         New Game
-    </span>
-    <span *ngIf="isInGame()" class="clickable" (click)="navigate('/dashboard')">
+    </span> -->
+    <!-- <span *ngIf="isInGame()" class="clickable" (click)="navigate('/dashboard')">
         Restart Game
-    </span>
+    </span> -->
 </div>
 <!-- <mat-toolbar class="enterprise-header">
     <a class="app-title-link" href="/">
