--- a/src/app/game-dashboard/game-dashboard.component.css
+++ b/src/app/game-dashboard/game-dashboard.component.css
@@ -1,11 +1,3 @@
-/* html,
-body {
-  height: 100%;
-  width: 100%;
-  margin: 0;
-
-} */
-
 .scoreButton {
   display: block;
   /* font-size:24px; */
@@ -20,7 +12,7 @@ body {
   /* width: 99.5%; */
   width: 80%;
   display: flex;
-  /* justify-content: space-between; */
+  justify-content: space-between;
   flex-direction: column;
   padding: 5px 5px 5px 5px;
 } 
